<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_two" >

    <TextView
        style="@style/tv_prompt_xlarge_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:background="@color/bg_main">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_wl_order_cancel"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_account"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:maxLines="1"
            android:maxLength="12"
            android:textColorHint="@color/main_hint"
            android:layout_toLeftOf="@+id/iv_cancel"
            android:background="@null" />
            
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/bg_main">

        <ImageView
            android:id="@+id/iv_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_btn_eye_off"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="12"
            android:textColorHint="@color/main_hint"
            android:hint="@string/input_pwd"
            android:layout_toLeftOf="@+id/iv_decode"
            android:background="@null" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/tv_white_large_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:background="@drawable/selector_btn_red_common" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >

        <TextView
            style="@style/tv_link_list_style"
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_pwd" />

        <TextView
            style="@style/tv_link_list_style"
            android:id="@+id/tv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </RelativeLayout>

</LinearLayout>